<resources>
    <string name="app_name">proj3_final</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Title">CS 360 Inventory App Login</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="home">Home</string>
    <string name="item">New Item</string>
    <string name="alerts">Alerts</string>
    <string name="help">Help</string>
    <string name="newItemTitle">Add Item</string>
    <string name="addItemText">Item Name</string>
    <string name="addItemQuantity">Initial Item Quantity</string>
    <string name="addItemButton">Add Item</string>
    <string name="addItemTitle">Add Item</string>
    <string name="decreaseBy">Decrease By:</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="increaseBy">Increase By:</string>
    <string name="homeTitle">Warehouse Items</string>
    <string name="alertText">Set Alert Threshold:</string>
    <string name="alertStatus">Alert Status: OFF</string>
    <string name="removeAlert">Remove Alert</string>
    <string name="schissler">Made by Anthony Schissler</string>
    <string name="smsPermission">SMS Permission Request</string>
    <string name="smsMessage">This application can utilize SMS to notify users of low inventory. Allowing this feature is strongly recommended, but not required.</string>
</resources>