<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_all_around"
    android:backgroundTintMode="src_over">

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="83dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/confirm"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/increaseAmountText" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="@+id/increaseAmountField"
        app:layout_constraintTop_toBottomOf="@+id/increaseAmountField" />

    <TextView
        android:id="@+id/increaseAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:text="@string/increaseBy"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/increaseAmountField"
        android:layout_width="225dp"
        android:layout_height="44dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/increaseAmountText" />
</androidx.constraintlayout.widget.ConstraintLayout>